# anti-gambling-trader-tw

./: .gitignore  DISCLAIMER.md  LICENSE  README.md  pyproject.toml  requirements.txt
.claude/skills/anti-gambling-trader/: SKILL.md
core/: __init__.py  analyzer.py  cli.py  models.py  report.py
core/antiscam/: __init__.py  checklist.py  patterns.py  signals.py
core/backtest/: __init__.py  validate.py
core/broker/: __init__.py  base.py  paper.py  registry.py  registry_more.py  registry_tw.py
core/charts/: __init__.py  preview.py  registry.py
core/ingest/: __init__.py  api_connectors.py  costs.py  loader.py
core/metrics/: __init__.py  breakeven.py  performance.py
core/scaffold/: __init__.py  generator.py  templates.py
core/strategy/: __init__.py  per_tag.py  profiler.py  skeleton.py
core/verdict/: __init__.py  judge.py  statistics.py
docs/: anti-scam.md  methodology.md  quickstart.md
examples/: crypto_luck.json  tw_stock_gambling.csv  us_stock_edge.csv
tests/: test_antiscam.py  test_core.py  test_engine.py  test_trading_tools.py  test_usability.py
